<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start">

<include
    layout="@layout/app_bar_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="4"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            ></RelativeLayout>



        <!-- Signed in panel-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:weightSum="5"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/signed_in_profileImage"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">


                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/signed_in_profileName"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/signed_in_profileName"
                    android:layout_marginTop="20dp"
                    android:id="@+id/signed_in_profileEmail"
                    />

            </RelativeLayout>




        </LinearLayout>


       <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/grey_300"
            android:gravity="center_vertical">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:visibility="gone"
               android:id="@+id/signed_in_panel">






               <ImageView
                   android:layout_width="35dp"
                   android:layout_height="35dp"
                   android:layout_marginTop="20dp"
                   app:srcCompat="@drawable/ic_mode_edit_black_24dp"
                   android:layout_marginLeft="20dp"
                   android:id="@+id/profile_imageV"
                   />

               <Button
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:text="Account Profile"
                   android:layout_toRightOf="@+id/profile_imageV"
                   android:layout_marginLeft="30dp"
                   android:id="@+id/profile_button"
                   style="@style/Base.Widget.AppCompat.Button.Borderless"
                   android:onClick="onClick"
                   />


               <ImageView
                   android:layout_width="35dp"
                   android:layout_height="35dp"
                   app:srcCompat = "@drawable/ic_book_black_24dp"
                   android:layout_below="@id/profile_imageV"
                   android:layout_marginTop="20dp"
                   android:layout_marginLeft="20dp"
                   android:id="@+id/bookList_imageV"
                   />

               <Button
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:text="My books"
                   android:layout_below="@+id/profile_button"
                   android:id="@+id/bookList_button"
                   android:layout_marginTop="20dp"
                   android:layout_toRightOf="@+id/bookList_imageV"
                   android:layout_marginLeft="30dp"
                   style="@style/Base.Widget.AppCompat.Button.Borderless"
                   android:onClick="onClick"
                   />



           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/sign_in_panel"

               >

               <EditText
                   android:id="@+id/field_name"
                   android:layout_width="200dp"
                   android:layout_height="40dp"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="15dp"
                   android:hint="Enter your name"
                   android:inputType="text" />

               <EditText
                   android:id="@+id/field_email"
                   android:layout_width="200dp"
                   android:layout_height="40dp"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="15dp"
                   android:layout_below="@+id/field_name"
                   android:hint="@string/hint_email"
                   android:inputType="textEmailAddress" />

               <EditText
                   android:id="@+id/field_password"
                   android:layout_width="200dp"
                   android:layout_height="40dp"
                   android:hint="@string/hint_password"
                   android:inputType="textPassword"
                   android:layout_marginTop="15dp"
                   android:layout_centerHorizontal="true"
                   android:layout_below="@id/field_email"

                   />

               <Button
                   android:id="@+id/email_sign_in_button"
                   android:layout_width="200dp"
                   android:layout_height="40dp"
                   android:layout_below="@+id/field_password"
                   android:text="@string/sign_in"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="15dp"
                   android:theme="@style/ThemeOverlay.MyDarkButton" />

               <Button
                   android:id="@+id/email_create_account_button"
                   android:layout_width="200dp"
                   android:layout_height="40dp"
                   android:layout_below="@+id/email_sign_in_button"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="15dp"
                   android:text="@string/create_account"
                   android:theme="@style/ThemeOverlay.MyDarkButton" />






           </RelativeLayout>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/facebook_login_panel">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/button_facebook_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/sign_out_panel">


                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/verify_email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_email"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:layout_below="@+id/sign_out_button"
                    android:layout_marginTop="20dp"
                    />



            </RelativeLayout>




        </RelativeLayout>


    </LinearLayout>


<android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main_content"
    app:menu="@menu/activity_main_content_drawer" >

</android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
